--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-calendar-strip": "^2.2.6",
+    "react-native-calendars": "^1.1303.0",
     "react-native-date-picker": "^4.3.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-responsive-screen": "^1.4.2",
